Delete redundant code

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -95,34 +95,36 @@
         </picture>
       </li>
       <li class="gallery-item">
-        <!-- <picture>
-            <source
-            srcset="img/gallery/gal-desk-5.png 1x, img/gallery/gal-desk-5@2x.png 2x"
-            media="(min-width: 1200px)" />
+        <picture>
           <source
-            srcset="img/gallery/gal-mob-5.png 1x, img/gallery/gal-mob-5@2x.png 2x"
-            media="(min-width: 280px)" /> -->
-        <img
-          class="gallery-picture"
-          src="img/gallery/gal-desk-5.png"
-          alt="game hero"
-        />
-        <!-- </picture> -->
+            srcset="
+              img/gallery/gal-desk-5.png    1x,
+              img/gallery/gal-desk-5@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <img
+            class="gallery-picture"
+            src="img/gallery/gal-desk-5.png"
+            alt="game hero"
+          />
+        </picture>
       </li>
       <li class="gallery-item">
-        <!-- <picture>
-            <source
-            srcset="img/gallery/gal-desk-6.png 1x, img/gallery/gal-desk-6@2x.png 2x"
-            media="(min-width: 1200px)" />
+        <picture>
           <source
-            srcset="img/gallery/gal-mob-6.png 1x, img/gallery/gal-mob-6@2x.png 2x"
-            media="(min-width: 280px)" /> -->
-        <img
-          class="gallery-picture"
-          src="img/gallery/gal-desk-6.png"
-          alt="game hero"
-        />
-        <!-- </picture> -->
+            srcset="
+              img/gallery/gal-desk-6.png    1x,
+              img/gallery/gal-desk-6@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <img
+            class="gallery-picture"
+            src="img/gallery/gal-desk-6.png"
+            alt="game hero"
+          />
+        </picture>
       </li>
     </ul>
   </div>
