--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -3,7 +3,7 @@
     <h2 class="how-section-title">How to Play</h2>
     <ul class="how-list">
       <li class="how-item">
-        <picture class="how-picture">
+        <picture class="how-picture box">
           <source
             srcset="
               ./img/how-to-play/rectangle-32.png    1x,
