--- a/src/scss/how-to-play.scss
+++ b/src/scss/how-to-play.scss
@@ -76,3 +76,22 @@
     height: 300px;
   }
 }
+// =================== Transform ==================
+.box:hover {
+  animation: animateX 3000ms infinite 1000ms;
+}
+
+@keyframes animateX {
+  0% {
+    transform: skewX(0deg);
+  }
+
+  50% {
+    transform: skewX(5deg);
+  }
+
+  100% {
+    transform: skewX(0deg);
+  }
+}
+// =================== Transform ==================
