--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -3,7 +3,7 @@
     <h2 class="feature-section-title">Feature Highlights</h2>
     <ul class="feature-list">
       <li class="feature-item">
-        <picture class="feature-picture">
+        <picture class="feature-picture box-minus">
           <source
             srcset="
               ./img/feature/picture3.png    1x,
@@ -33,7 +33,7 @@
         </div>
       </li>
       <li class="feature-item">
-        <picture class="feature-picture">
+        <picture class="feature-picture box-plus">
           <source
             srcset="
               ./img/feature/picture.png    1x,
@@ -64,7 +64,7 @@
         </div>
       </li>
       <li class="feature-item">
-        <picture class="feature-picture">
+        <picture class="feature-picture box-minus">
           <source
             srcset="
               ./img/feature/picture2.png    1x,
