--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -19,7 +19,7 @@
             media="(min-width: 280px)"
           />
           <img
-            class="gallery-picture"
+            class="gallery-picture box-minus"
             src="img/gallery/gal-desk-1.png"
             alt="game hero"
           />
@@ -42,7 +42,7 @@
             media="(min-width: 280px)"
           />
           <img
-            class="gallery-picture"
+            class="gallery-picture box-minus"
             src="img/gallery/gal-desk-2.png"
             alt="game hero"
           />
@@ -65,7 +65,7 @@
             media="(min-width: 280px)"
           />
           <img
-            class="gallery-picture"
+            class="gallery-picture box-minus"
             src="img/gallery/gal-desk-3.png"
             alt="game hero"
           />
@@ -88,7 +88,7 @@
             media="(min-width: 280px)"
           />
           <img
-            class="gallery-picture"
+            class="gallery-picture box-plus"
             src="img/gallery/gal-desk-4.png"
             alt="game hero"
           />
@@ -104,7 +104,7 @@
             media="(min-width: 1200px)"
           />
           <img
-            class="gallery-picture"
+            class="gallery-picture box-plus"
             src="img/gallery/gal-desk-5.png"
             alt="game hero"
           />
@@ -120,7 +120,7 @@
             media="(min-width: 1200px)"
           />
           <img
-            class="gallery-picture"
+            class="gallery-picture box-plus"
             src="img/gallery/gal-desk-6.png"
             alt="game hero"
           />
