--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -3,7 +3,7 @@
     <h2 class="how-section-title">How to Play</h2>
     <ul class="how-list">
       <li class="how-item">
-        <picture class="how-picture box">
+        <picture class="how-picture box-plus">
           <source
             srcset="
               ./img/how-to-play/rectangle-32.png    1x,
@@ -32,7 +32,7 @@
         </div>
       </li>
       <li class="how-item">
-        <picture class="how-picture">
+        <picture class="how-picture box-minus">
           <source
             srcset="
               ./img/how-to-play/picture.png    1x,
@@ -63,7 +63,7 @@
         </div>
       </li>
       <li class="how-item">
-        <picture class="how-picture">
+        <picture class="how-picture box-plus">
           <source
             srcset="
               ./img/how-to-play/picture2.png    1x,
