--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -60,3 +60,37 @@
     padding: 80px 80px;
   }
 }
+// =================== Transform ==================
+.box-plus:hover {
+  animation: animatePlus 3000ms infinite 1000ms;
+}
+.box-minus:hover {
+  animation: animateMinus 3000ms infinite 1000ms;
+}
+@keyframes animatePlus {
+  0% {
+    transform: skewX(0deg);
+  }
+
+  50% {
+    transform: skewX(5deg);
+  }
+
+  100% {
+    transform: skewX(0deg);
+  }
+}
+@keyframes animateMinus {
+  0% {
+    transform: skewX(0deg);
+  }
+
+  50% {
+    transform: skewX(-5deg);
+  }
+
+  100% {
+    transform: skewX(0deg);
+  }
+}
+// =================== Transform ==================
