--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -53,7 +53,7 @@
 .container {
   max-width: 375px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 32px 16px;
 
   @include media(desktop) {
     max-width: 1200px;
