--- a/src/scss/why-us.scss
+++ b/src/scss/why-us.scss
@@ -1,93 +1,95 @@
 .us-container {
-    max-width: 375px;
-    margin: 0 auto;
-    padding-right: 16px;
-    padding-left: 16px;
-  
-    @include media(desktop) {
-      max-width: 1200px;
-      padding-right: 80px;
-      padding-left: 80px;
-    }
-  }
-  
-  .us-text-wrapper {
-    max-width: 593px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
-  
-    @include media(desktop) {
-      margin-bottom: 40px;
-    }
-  }
-  
-  .us-list {
-    max-width: 867px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    align-items: center;
-  
-    @include media(desktop) {
-      flex-direction: row;
-      flex-wrap: wrap;
-      row-gap: 20px;
-      justify-content: space-between;
-    }
-  }
-  
-  .us-item {
-    justify-self: center;
-    border-radius: 6px;
-    padding: 6px 8px;
-    font-size: 17px;
-    letter-spacing: 0em;
-    background-color: #6c331e;
-  
-    @include media(desktop) {
-      font-size: 26px;
-      padding: 12px 16px;
-    }
-  }
-  
+  max-width: 375px;
+  margin: 0 auto;
+  padding-right: 16px;
+  padding-left: 16px;
+
   @include media(desktop) {
-    .us-item:nth-child(1) {
-      order: 1;
-    }
-  
-    .us-item:nth-child(2) {
-      order: 2;
-      padding-right: 20px;
-      padding-left: 20px;
-    }
-  
-    .us-item:nth-child(3) {
-      order: 4;
-      padding-right: 14px;
-      padding-left: 14px;
-    }
-  
-    .us-item:nth-child(4) {
-      order: 6;
-    }
-  
-    .us-item:nth-child(5) {
-      order: 3;
-    }
-  
-    .us-item:nth-child(6) {
-      order: 5;
-    }
-  
-    .us-item:nth-child(7) {
-      order: 7;
-      width: 100%;
-      text-align: center;
-    }
+    max-width: 1200px;
+    padding-right: 80px;
+    padding-left: 80px;
   }
-  
+}
+
+.us-text-wrapper {
+  max-width: 593px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+
+  @include media(desktop) {
+    margin-bottom: 40px;
+  }
+}
+
+.us-list {
+  max-width: 867px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+
+  @include media(desktop) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    justify-content: space-between;
+  }
+}
+
+.us-item {
+  justify-self: center;
+  border-radius: 6px;
+  padding: 6px 8px;
+  font-size: 17px;
+  letter-spacing: 0em;
+  background-color: #6c331e;
+
+  @include media(desktop) {
+    font-size: 26px;
+    padding: 12px 16px;
+  }
+}
+.us-item:hover {
+  transform: scale(1.03);
+}
+
+@include media(desktop) {
+  .us-item:nth-child(1) {
+    order: 1;
+  }
+
+  .us-item:nth-child(2) {
+    order: 2;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .us-item:nth-child(3) {
+    order: 4;
+    padding-right: 14px;
+    padding-left: 14px;
+  }
+
+  .us-item:nth-child(4) {
+    order: 6;
+  }
+
+  .us-item:nth-child(5) {
+    order: 3;
+  }
+
+  .us-item:nth-child(6) {
+    order: 5;
+  }
+
+  .us-item:nth-child(7) {
+    order: 7;
+    width: 100%;
+    text-align: center;
+  }
+}
