--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -1,3 +1,6 @@
+body {
+  padding-top: 54px;
+}
 .pages-container {
   display: flex;
   flex-direction: column;
@@ -11,13 +14,14 @@
   display: block;
   width: 44px;
   height: 44px;
+  margin-bottom: 12px;
   @include media(desktop) {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     width: 175px;
     height: 50px;
+    margin-bottom: 20px;
   }
 }
 .pages-back-link:hover {
@@ -49,7 +53,7 @@
   justify-content: center;
   align-items: flex-start;
   border-radius: 20px;
-  background-color: #FFEEC3;
+  background-color: #ffeec3;
   @include media(desktop) {
     padding: 40px 88px 40px 88px;
   }
