--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,21 +6,21 @@
         <picture>
           <source
             srcset="
-              img/gallery/gal-desk-1.png    1x,
-              img/gallery/gal-desk-1@2x.png 2x
+              ./img/gallery/gal-desk-1.png    1x,
+              ./img/gallery/gal-desk-1@2x.png 2x
             "
             media="(min-width: 1200px)"
           />
           <source
             srcset="
-              img/gallery/gal-mob-1.png    1x,
-              img/gallery/gal-mob-1@2x.png 2x
+              ./img/gallery/gal-mob-1.png    1x,
+              ./img/gallery/gal-mob-1@2x.png 2x
             "
             media="(min-width: 280px)"
           />
           <img
             class="gallery-picture box-minus"
-            src="img/gallery/gal-desk-1.png"
+            src="./img/gallery/gal-desk-1.png"
             alt="game hero"
           />
         </picture>
@@ -29,21 +29,21 @@
         <picture>
           <source
             srcset="
-              img/gallery/gal-desk-2.png    1x,
-              img/gallery/gal-desk-2@2x.png 2x
+              ./img/gallery/gal-desk-2.png    1x,
+              ./img/gallery/gal-desk-2@2x.png 2x
             "
             media="(min-width: 1200px)"
           />
           <source
             srcset="
-              img/gallery/gal-mob-2.png    1x,
-              img/gallery/gal-mob-2@2x.png 2x
+              ./img/gallery/gal-mob-2.png    1x,
+              ./img/gallery/gal-mob-2@2x.png 2x
             "
             media="(min-width: 280px)"
           />
           <img
             class="gallery-picture box-minus"
-            src="img/gallery/gal-desk-2.png"
+            src="./img/gallery/gal-desk-2.png"
             alt="game hero"
           />
         </picture>
@@ -52,21 +52,21 @@
         <picture>
           <source
             srcset="
-              img/gallery/gal-desk-3.png    1x,
-              img/gallery/gal-desk-3@2x.png 2x
+              ./img/gallery/gal-desk-3.png    1x,
+              ./img/gallery/gal-desk-3@2x.png 2x
             "
             media="(min-width: 1200px)"
           />
           <source
             srcset="
-              img/gallery/gal-mob-3.png    1x,
-              img/gallery/gal-mob-3@2x.png 2x
+              ./img/gallery/gal-mob-3.png    1x,
+              ./img/gallery/gal-mob-3@2x.png 2x
             "
             media="(min-width: 280px)"
           />
           <img
             class="gallery-picture box-minus"
-            src="img/gallery/gal-desk-3.png"
+            src="./img/gallery/gal-desk-3.png"
             alt="game hero"
           />
         </picture>
@@ -75,21 +75,21 @@
         <picture>
           <source
             srcset="
-              img/gallery/gal-desk-4.png    1x,
-              img/gallery/gal-desk-4@2x.png 2x
+              ./img/gallery/gal-desk-4.png    1x,
+              ./img/gallery/gal-desk-4@2x.png 2x
             "
             media="(min-width: 1200px)"
           />
           <source
             srcset="
-              img/gallery/gal-mob-4.png    1x,
-              img/gallery/gal-mob-4@2x.png 2x
+              ./img/gallery/gal-mob-4.png    1x,
+              ./img/gallery/gal-mob-4@2x.png 2x
             "
             media="(min-width: 280px)"
           />
           <img
             class="gallery-picture box-plus"
-            src="img/gallery/gal-desk-4.png"
+            src="./img/gallery/gal-desk-4.png"
             alt="game hero"
           />
         </picture>
@@ -98,14 +98,14 @@
         <picture>
           <source
             srcset="
-              img/gallery/gal-desk-5.png    1x,
-              img/gallery/gal-desk-5@2x.png 2x
+              ./img/gallery/gal-desk-5.png    1x,
+              ./img/gallery/gal-desk-5@2x.png 2x
             "
             media="(min-width: 1200px)"
           />
           <img
             class="gallery-picture box-plus"
-            src="img/gallery/gal-desk-5.png"
+            src="./img/gallery/gal-desk-5.png"
             alt="game hero"
           />
         </picture>
@@ -114,14 +114,14 @@
         <picture>
           <source
             srcset="
-              img/gallery/gal-desk-6.png    1x,
-              img/gallery/gal-desk-6@2x.png 2x
+              ./img/gallery/gal-desk-6.png    1x,
+              ./img/gallery/gal-desk-6@2x.png 2x
             "
             media="(min-width: 1200px)"
           />
           <img
             class="gallery-picture box-plus"
-            src="img/gallery/gal-desk-6.png"
+            src="./img/gallery/gal-desk-6.png"
             alt="game hero"
           />
         </picture>
