--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -35,18 +35,18 @@
 .swiper-slide:nth-child(1),
 .swiper-slide:nth-child(4) {
   background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-    url('/img/reviewes/bg-1-mob.png');
+    url('./img/reviewes/bg-1-mob.png');
 }
 
 .swiper-slide:nth-child(2),
 .swiper-slide:nth-child(5) {
   background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-    url('/img/reviewes/bg-2-mob.png');
+    url('./img/reviewes/bg-2-mob.png');
 }
 
 .swiper-slide:nth-child(3) {
   background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-    url('/img/reviewes/bg-3-mob.png');
+    url('./img/reviewes/bg-3-mob.png');
 }
 
 .content {
@@ -82,18 +82,18 @@
   .swiper-slide:nth-child(1),
   .swiper-slide:nth-child(4) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-1-mob@2x.png');
+      url('./img/reviewes/bg-1-mob@2x.png');
   }
 
   .swiper-slide:nth-child(2),
   .swiper-slide:nth-child(5) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-2-mob@2x.png');
+      url('./img/reviewes/bg-2-mob@2x.png');
   }
 
   .swiper-slide:nth-child(3) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-3-mob@2x.png');
+      url('./img/reviewes/bg-3-mob@2x.png');
   }
 }
 
@@ -101,18 +101,18 @@
   .swiper-slide:nth-child(1),
   .swiper-slide:nth-child(4) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-1-desk.png');
+      url('./img/reviewes/bg-1-desk.png');
   }
 
   .swiper-slide:nth-child(2),
   .swiper-slide:nth-child(5) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-2-desk.png');
+      url('./img/reviewes/bg-2-desk.png');
   }
 
   .swiper-slide:nth-child(3) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-3-desk.png');
+      url('./img/reviewes/bg-3-desk.png');
   }
 }
 
@@ -122,17 +122,17 @@
   .swiper-slide:nth-child(1),
   .swiper-slide:nth-child(4) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-1-desk@2x.png');
+      url('./img/reviewes/bg-1-desk@2x.png');
   }
 
   .swiper-slide:nth-child(2),
   .swiper-slide:nth-child(5) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-2-desk@2x.png');
+      url('./img/reviewes/bg-2-desk@2x.png');
   }
 
   .swiper-slide:nth-child(3) {
     background-image: linear-gradient(144deg, #000 0%, rgba(0, 0, 0, 0) 100%),
-      url('/img/reviewes/bg-3-desk@2x.png');
+      url('./img/reviewes/bg-3-desk@2x.png');
   }
 }
